--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <h1>Autocomplete</h1>
     <form>
       <label for="autocomplete-input" id="autocomplete-label"
-        >Type a name of your favorite color</label
+        >Liste de pays du monde</label
       >
       <div
         class="autocomplete__container"
